--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Python code indentation repairing tool</h1>
     </div>
     <div>
-        <p><a href="https://pydent-kor--usgnosny.repl.co/">한국어</a></p>
+        <p><a href="https://yssgo.github.io/pydent-kor/">한국어</a></p>
     </div>
     <div id="#wrap">
     <div class="flow">
