--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="flow">
       <p>Paste code here </p>
       <p>
-      <textarea id="code" rows="20">if a=3:
+      <textarea id="code" rows="20">if a==3:
 '''
 abcde
 '''
@@ -29,7 +29,7 @@ f='''xxxx
 b=4
 else:
   k=1
- while k &lt; 5:
+ while k &lt; 50:
   k -= 1
   #END
   c=5
@@ -91,7 +91,7 @@ opq
 b=4
 else:
   k=1
- while k &lt; 5:
+ while k &lt; 50:
    k-=1
      #END
 c=5
