--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <div class="flow">
       <p>Paste code here </p>
       <p>
-      <textarea id="code" rows="20">if a==3:
+      <textarea id="code" rows="20">#DEDENT-END-TAG ON
+if a==3:
 '''
 abcde
 '''
